--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,6 +40,7 @@ android {
 repositories {
     google()
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 
@@ -51,5 +52,6 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
+    implementation "com.github.pedroSG94.rtmp-rtsp-stream-client-java:rtplibrary:2.1.9"
+    implementation "com.amazonaws:ivs-broadcast:1.5.0"
 }
-
